--- a/Projet Web Commerce/Views/Home/Index.cshtml
+++ b/Projet Web Commerce/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <head>
-        <meta http-equiv="refresh" content="0; url=https://localhost:7267/Films" />
+        <meta http-equiv="refresh" content="0; url=https://localhost:44376/Home/Privacy" />
     </head>
 }
 else
