--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Inscription Acheteur";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -16,6 +16,11 @@
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email">Email</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.ConfirmEmail" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                <label asp-for="Input.ConfirmEmail">Confirm Email</label>
+                <span asp-validation-for="Input.ConfirmEmail" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
@@ -33,6 +38,7 @@
     <div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to register.</h3>
+            <a asp-area="Identity" asp-page="/Account/RegisterVendeur">S'inscrire comme vendeur</a>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
