--- a/Projet Web Commerce/Areas/Identity/Pages/Account/RegisterVendeur.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/RegisterVendeur.cshtml
@@ -18,6 +18,11 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
+                <input asp-for="Input.ConfirmEmail" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                <label asp-for="Input.ConfirmEmail">Confirm Email</label>
+                <span asp-validation-for="Input.ConfirmEmail" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.Password">Password</label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
@@ -27,6 +32,28 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-floating mb-3">
+                <select asp-for="Input.SelectedNumberPoids" class="form-control" aria-required="true">
+                    @for (int i = 1; i <= 500; i++)
+                    {
+                        <option value="@i">@i Kg</option>
+                    }
+                </select>
+                <label asp-for="Input.SelectedNumberPoids">Poids max pour livraison (Kg)</label>
+                <span asp-validation-for="Input.SelectedNumberPoids" class="text-danger"></span>
+            </div>
+
+            <div class="form-floating mb-3">
+                <select asp-for="Input.SelectedNumberLivraison" class="form-control" aria-required="true">
+                    @for (int i = 0; i <= 500; i++)
+                    {
+                        <option value="@i">@i Kg</option>
+                    }
+                </select>
+                <label asp-for="Input.SelectedNumberLivraison">Prix pour livraison gratuite ($ CAD)</label>
+                <span asp-validation-for="Input.SelectedNumberLivraison" class="text-danger"></span>
+            </div>
+
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
