--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Login.cshtml
@@ -30,7 +30,7 @@
                     </label>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Se connecter</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary" style="color: rgb(249, 229, 71); background-color: rgb(124, 105, 146)">Se connecter</button>
                 </div>
                 <div>
                     <p>
@@ -53,6 +53,7 @@
         </section>
     </div>
 </div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
