--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Login.cshtml
@@ -25,7 +25,7 @@
                 </div>
                 <div class="checkbox mb-3">
                     <label asp-for="Input.RememberMe" class="form-label">
-                        <input class="form-check-input" asp-for="Input.RememberMe" />
+                        <input class="form-check-input" style="background-color: rgb(124, 105, 146)" asp-for="Input.RememberMe" />
                         Se rapeller de moi?
                     </label>
                 </div>
@@ -44,12 +44,6 @@
                     </p>
                 </div>
             </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Êtes-vous gestionnaire?</h3>
-            <a asp-area="Identity" asp-page="/Account/LoginGestionnaire">Se connecter comme gestionnaire</a>
         </section>
     </div>
 </div>
