--- a/Projet Web Commerce/Views/Shared/_Layout.cshtml
+++ b/Projet Web Commerce/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     <header>
         <nav class="navbar navbar-custom navbar-expand-sm navbar-toggleable-sm navbar-light bg-customMauve border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <img style="width: 80px; height: 80px" src="https://localhost:44376/Logo.png" />
+                <img style="width: 100px; height: 100px" src="https://localhost:44376/Logo.png" />
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" style="color: rgb(249, 229, 71)" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" style="color: rgb(249, 229, 71); font-size: 23px" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                     </ul>
                 </div>
