--- a/Projet Web Commerce/Views/Home/Index.cshtml
+++ b/Projet Web Commerce/Views/Home/Index.cshtml
@@ -7,12 +7,12 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <head>
-        <meta http-equiv="refresh" content="0; url=https://localhost:44376/Home/Privacy" />
+        <meta http-equiv="refresh" content="0; url=https://localhost:44376/MainMenu" />
     </head>
 }
 else
 {
     <head>
-        <meta http-equiv="refresh" content="0; url=https://localhost:44376/Identity/Account/Login" />
+        <meta http-equiv="refresh" content="0; url=https://localhost:44376/MainMenu" />
     </head>
 }
