--- a/Projet Web Commerce/Views/MainMenu/Index.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Index.cshtml
@@ -5,7 +5,14 @@
 <div class="row">
     <div class="col-md-4">
         <section>
-            
+            @if (true)
+            {
+                <h1>Vous êtes connecté</h1>
+            }
+            else
+            {
+                <h1>Vous n'êtes pas connecté</h1>
+            }
         </section>
     </div>
 </div>
