--- a/Projet Web Commerce/Views/MainMenu/Index.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Index.cshtml
@@ -1,13 +1,31 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Identity
+@using System.Security.Claims
+@inject SignInManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> SignInManager
+@inject UserManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> UserManager
 
+@{
+    var user = await UserManager.GetUserAsync(User);
+    var role = "help";
+    if (User.IsInRole("Gestionnaire"))
+    {
+        role = "Gestionnaire";
+    }
+    else if (User.IsInRole("Vendeur"))
+    {
+        role = "Vendeur";
+    }
+    else
+    {
+        role = "Acheteur";
+    }
 }
 
 <div class="row">
     <div class="col-md-4">
         <section>
-            @if (true)
+            @if (SignInManager.IsSignedIn(User))
             {
-                <h1>Vous êtes connecté</h1>
+                <h1>Vous êtes connecté @role</h1>
             }
             else
             {
