--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Login.cshtml
@@ -34,7 +34,7 @@
                 </div>
                 <div>
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Mot de passe oublié?</a>
+                        <a id="forgot-password" asp-page="./MdpOublie">Mot de passe oublié?</a>
                     </p>
                     <p>
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">S'enregistrer comme nouvel utilisateur</a>
