changed provinces to french

--- a/Projet Web Commerce/Areas/Identity/Pages/Account/RegisterVendeur.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/RegisterVendeur.cshtml
@@ -62,16 +62,16 @@
             <div class="form-floating mb-3">
                 <select asp-for="Input.SelectedProvince" class="form-control" aria-required="true">
                     <option value="AB">Alberta</option>
-                    <option value="BC">British Columbia</option>
+                    <option value="BC">Colombie-Britannique</option>
                     <option value="MB">Manitoba</option>
-                    <option value="NB">New Brunswick</option>
-                    <option value="NL">Newfoundland and Labrador</option>
-                    <option value="NS">Nova Scotia</option>
-                    <option value="NT">Northwest Territories</option>
+                    <option value="NB">Nouveau-Brunswick</option>
+                    <option value="NL">Terre-Neuve-et-Labrador</option>
+                    <option value="NS">Nouvelle-Écosse</option>
+                    <option value="NT">Territoires du Nord-Ouest</option>
                     <option value="NU">Nunavut</option>
                     <option value="ON">Ontario</option>
-                    <option value="PE">Prince Edward Island</option>
-                    <option value="QC">Quebec</option>
+                    <option value="PE">Île-du-Prince-Édouard</option>
+                    <option value="QC">Québec</option>
                     <option value="SK">Saskatchewan</option>
                     <option value="YT">Yukon</option>
                 </select>
