--- a/Projet Web Commerce/Views/MainMenu/Index.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Index.cshtml
@@ -43,7 +43,10 @@
                                                 <h5 class="card-title">@Html.DisplayFor(modelItem => item.AdresseEmail)</h5>
                                                 <p class="card-text">No Vendeur: @Html.DisplayFor(modelItem => item.NoVendeur)</p>
                                                 <p class="card-text">Date de demande : @Html.DisplayFor(modelItem => item.DateCreation)</p>
-                                                <button class="btn btn-primary">Accepter</button>
+                                                <form asp-controller="MainMenu" method="post">
+                                                    <input type="hidden" name="NoVendeur" value="@item.NoVendeur" />
+                                                    <button type="submit" class="btn btn-primary">Accepter</button>s
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
