--- a/Projet Web Commerce/Areas/Identity/Pages/Account/RegisterVendeur.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/RegisterVendeur.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Inscription vendeur";
 }
 
+<a asp-area="Identity" asp-page="/Account/Register">Retour</a>
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
