--- a/Projet Web Commerce/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -3,12 +3,13 @@
 @{
     ViewData["Title"] = "Forgot your password?";
 }
-
+<a asp-area="Identity" asp-page="/Account/Login">Retour</a>
 <h1>@ViewData["Title"]</h1>
 <h2>Enter your email.</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
+        
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
