--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Login.cshtml
@@ -26,7 +26,7 @@
                 <div class="checkbox mb-3">
                     <label asp-for="Input.RememberMe" class="form-label">
                         <input class="form-check-input" style="background-color: rgb(124, 105, 146)" asp-for="Input.RememberMe" />
-                        Se rapeller de moi?
+                        Se rappeler de moi?
                     </label>
                 </div>
                 <div>
