--- a/Projet Web Commerce/Views/MainMenu/Index.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
-@model List<Projet_Web_Commerce.Models.PPVendeurs>
+@model Projet_Web_Commerce.Models.ModelMainMenu
 @inject SignInManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> SignInManager
 @inject UserManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> UserManager
 
@@ -35,7 +35,7 @@
                         @if (role == "Gestionnaire" && Model != null)
                         {
                             <div class="row">
-                                @foreach (var item in Model)
+                                @foreach (var item in Model.VendeursList)
                                 {
                                     <div class="col-md-6 mb-4">
                                         <div class="card">
@@ -59,10 +59,66 @@
                         }
                     </div>
                 }
+                else if (role == "Client")
+                {
+                    <h3>Liste des Catégories</h3>
+                    <div class="container mt-4">
+                        @if (Model != null && Model.CategoriesList != null)
+                        {
+                            <div class="row">
+                                @foreach (var category in Model.CategoriesList)
+                                {
+                                    <div class="col-md-4 mb-4">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <h2 class="card-title">@Html.DisplayFor(modelItem => category.Description)</h2>
+                                                <h5 class="card-details">@Html.DisplayFor(modelItem => category.Details)</h5>
+                                                <p>Nombre de produits : 0</p>
+                                                <!-- Add other category properties as needed -->
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                }
+                            </div>
+                        }
+                        else
+                        {
+                            <p>Aucune catégorie trouvée.</p>
+                        }
+                    </div>
+                }
             }
             else
             {
                 <h1>Vous n'êtes pas connecté</h1>
+
+                <h3>Liste des Catégories</h3>
+                <div class="container mt-4">
+                    @if (Model != null && Model.CategoriesList != null)
+                    {
+                        <div class="row">
+                            @foreach (var category in Model.CategoriesList)
+                            {
+                                <div class="col-md-4 mb-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h2 class="card-title">@Html.DisplayFor(modelItem => category.Description)</h2>
+                                            <h5 class="card-details">@Html.DisplayFor(modelItem => category.Details)</h5>
+                                            <p>Nombre de produits : 0</p>
+                                            <!-- Add other category properties as needed -->
+
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+                        </div>
+                    }
+                    else
+                    {
+                        <p>Aucune catégorie trouvée.</p>
+                    }
+                </div>
             }
         </section>
     </div>
