--- a/Projet Web Commerce/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Mot de passe oublié?";
 }
 <a asp-area="Identity" asp-page="/Account/Login">Retour</a>
 <h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
+<h2>Veuillez entrer votre adresse courriel.</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -17,7 +17,7 @@
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Changer mot de passe</button>
         </form>
     </div>
 </div>
