changed true false to fr

--- a/Projet Web Commerce/Areas/Identity/Pages/Account/RegisterVendeur.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/RegisterVendeur.cshtml
@@ -63,8 +63,8 @@
 
             <div class="form-floating mb-3">
                 <select asp-for="Input.Tax" class="form-control" aria-required="true">
-                    <option value="True">True</option>
-                    <option value="False">False</option>
+                    <option value="True">Vrai</option>
+                    <option value="False">Faux</option>
                 </select>
                 <label asp-for="Input.Tax">Client doit payer taxe ?</label>
                 <span asp-validation-for="Input.Tax" class="text-danger"></span>
