--- a/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
@@ -23,10 +23,12 @@
 }
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 <!-- Load Slick Carousel -->
-<link rel="stylesheet" type="text/css" href="../slick/slick.css" />
-<link rel="stylesheet" type="text/css" href="../slick/slick-theme.css" />
-<script type="text/javascript" src="../slick/slick.min.js"></script>
+<link rel="stylesheet" type="text/css" href="~/slick/slick.css" />
+<link rel="stylesheet" type="text/css" href="~/slick/slick-theme.css" />
+<script src="~/slick/slick.min.js"></script>
+
 <!-- Your Slick Carousel Initialization Script -->
 <script type="text/javascript">
     $(document).ready(function () {
