--- a/Projet Web Commerce/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/Projet Web Commerce/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -8,7 +8,10 @@
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
-
+<!-- Load Slick Carousel -->
+<link rel="stylesheet" type="text/css" href="~/slick/slick.css" />
+<link rel="stylesheet" type="text/css" href="~/slick/slick-theme.css" />
+<script src="~/lib/"></script>
 
 <!-- Load DataTables -->
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" />
