--- a/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
@@ -22,24 +22,12 @@
     }
 }
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<!-- Load Slick Carousel -->
-<link rel="stylesheet" type="text/css" href="~/slick/slick.css" />
-<link rel="stylesheet" type="text/css" href="~/slick/slick-theme.css" />
-<script src="~/slick/slick.min.js"></script>
 
-<!-- Your Slick Carousel Initialization Script -->
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('.card').slick({
-            slidesToShow: 3,
-            slidesToScroll: 1,
-            autoplay: true,
-            autoplaySpeed: 2000,
-        });
-    });
-</script>
+
+
 
 
 @if (SignInManager.IsSignedIn(User))
@@ -55,23 +43,40 @@ else
 <div class="container mt-4">
     @if (Model != null && Model != null)
     {
-        <div class="row">
+        <section class="autoplay" data-sizes="50vw">
             @foreach (var category in Model)
             {
-                    <div class="card">
-                        <div class="card-body">
-                            <h2 class="card-title">@Html.DisplayFor(modelItem => category.Description)</h2>
-                            <h5 class="card-details">@Html.DisplayFor(modelItem => category.Details)</h5>
-                            <p>Nombre de produits : 0</p>
-                            <!-- Add other category properties as needed -->
-
+                    <div class="slide">
+                        <div class="card">
+                            <div class="card-body">
+                                <h2 class="card-title">@Html.DisplayFor(modelItem => category.Description)</h2>
+                                <h5 class="card-details">@Html.DisplayFor(modelItem => category.Details)</h5>
+                                <p>Nombre de produits : 0</p>
+                            </div>
                         </div>
                     </div>
+
             }
-        </div>
+        </section>
     }
     else
     {
         <p>Aucune catégorie trouvée.</p>
     }
 </div>
+
+
+<!-- Log the path of the Slick Carousel script -->
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script type="text/javascript">
+    $(document).on('ready', function () {
+        console.log("test");
+        $('.autoplay').slick({
+            slidesToShow: 3,
+            slidesToScroll: 3,
+            autoplay: true,
+            autoplaySpeed: 2000,
+        });
+    });
+</script>
