mdp oublie = reset mdp

--- a/Projet Web Commerce/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -17,7 +17,7 @@
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Changer mot de passe</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Réinitialiser le mot de passe</button>
         </form>
     </div>
 </div>
