--- a/Projet Web Commerce/Views/MainMenu/AccesRefuse.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/AccesRefuse.cshtml
@@ -1,9 +1,12 @@
-﻿@page
+﻿@using Microsoft.AspNetCore.Identity
+@using System.Security.Claims
+
 @{
     ViewData["Title"] = "Accès refusé";
 }
 
 <header>
+    <a asp-area="Identity" asp-page="/Account/Login">Retour</a>
     <h1 class="text-danger">@ViewData["Title"]</h1>
     <p class="text-danger">Vous n'avez pas accès à cette page.</p>
 </header>
