--- a/Projet Web Commerce/Views/MainMenu/Index.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Index.cshtml
@@ -6,7 +6,7 @@
 
 @{
     var user = await UserManager.GetUserAsync(User);
-    var role = "help";
+    var role = "";
     if (User.IsInRole("Gestionnaire"))
     {
         role = "Gestionnaire";
