--- a/Projet Web Commerce/Views/PPProduits/Create.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Create.cshtml
@@ -25,11 +25,7 @@
             <div class="form-group" style="display:none;">
                 <label asp-for="NoVendeur" class="control-label"></label>
                 <select asp-for="NoVendeur" class="form-control" asp-items="ViewBag.NoVendeur" hidden></select>
-            </div>
-            <div class="form-group" style="display:none;">
-                <label asp-for="NoCategorie" class="control-label"></label>
-                <select asp-for="NoCategorie" class="form-control" asp-items="ViewBag.NoCategorie" hidden></select>
-            </div>
+            </div>          
             <div class="form-group" style="display:none;">
                 <label asp-for="DateCreation" class="control-label"></label>
                 <input asp-for="DateCreation" class="form-control" />
@@ -48,7 +44,13 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <br>
-            
+
+            <div class="form-group">
+                <label asp-for="NoCategorie" class="control-label">Categorie : </label>
+                <select asp-for="NoCategorie" class="form-control" asp-items="ViewBag.NoCategorie" ></select>
+            </div>
+            <br>
+
             <div class="form-group">
                 <label asp-for="Photo" class="control-label">Image du Produit :</label>
                 <input type="file" id="file" name="file" accept="image/jpeg" class="form-control" />
@@ -75,29 +77,34 @@
             <br>
 
             <div class="form-group">
-                <label asp-for="Poids" class="control-label"></label>
-                <input asp-for="Poids" class="form-control" />
+                <label asp-for="Poids" class="control-label">Poids (Kg):</label>
+                <input asp-for="Poids" class="form-control" class="form-control" type="number" min="0" data-val="true" />
                 <span asp-validation-for="Poids" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DateVente" class="control-label"></label>
+            <br>
+
+            <div class="form-group" style="display:none;">
+                <label asp-for="DateVente" class="control-label" ></label>
                 <input asp-for="DateVente" class="form-control" />
                 <span asp-validation-for="DateVente" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="PrixVente" class="control-label"></label>
-                <input asp-for="PrixVente" class="form-control" />
+                <label asp-for="PrixVente" class="control-label">Prix Vente (CAD$):</label>
+                <input asp-for="PrixVente" class="form-control" class="form-control" type="number" min="0" data-val="true" />
                 <span asp-validation-for="PrixVente" class="text-danger"></span>
             </div>
+            <br>
+
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Ajouter" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Retour à la liste</a>
 </div>
 
 @section Scripts {
