--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -12,15 +12,54 @@
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
-                <input asp-for="Username" class="form-control" placeholder="Please choose your username." disabled />
-                <label asp-for="Username" class="form-label"></label>
+                <input asp-for="Input.Nom" class="form-control" placeholder="Veuillez entrer votre nom." />
+                <label asp-for="Input.Nom" class="form-label"></label>
+                <span asp-validation-for="Input.Prenom" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number."/>
-                <label asp-for="Input.PhoneNumber" class="form-label"></label>
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                <input asp-for="Input.Prenom" class="form-control" placeholder="Veuillez entrer votre prénom" />
+                <label asp-for="Input.Prenom" class="form-label"></label>
+                <span asp-validation-for="Input.Prenom" class="text-danger"></span>
             </div>
-            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Rue" class="form-control" placeholder="Veuillez entrer votre rue" />
+                <label asp-for="Input.Rue" class="form-label"></label>
+                <span asp-validation-for="Input.Rue" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Ville" class="form-control" placeholder="Veuillez entrer votre ville" />
+                <label asp-for="Input.Ville" class="form-label"></label>
+                <span asp-validation-for="Input.Ville" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <select asp-for="Input.Province" class="form-control">
+                    <option value="AB">Alberta</option>
+                    <option value="BC">Colombie-Britannique</option>
+                    <option value="MB">Manitoba</option>
+                    <option value="NB">Nouveau-Brunswick</option>
+                    <option value="NL">Terre-Neuve-et-Labrador</option>
+                    <option value="NS">Nouvelle-Écosse</option>
+                    <option value="NT">Territoires du Nord-Ouest</option>
+                    <option value="NU">Nunavut</option>
+                    <option value="ON">Ontario</option>
+                    <option value="PE">Île-du-Prince-Édouard</option>
+                    <option value="QC">Québec</option>
+                    <option value="SK">Saskatchewan</option>
+                    <option value="YT">Yukon</option>
+                </select>
+                <label asp-for="Input.Province" class="control-label"></label>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.CodePostal" class="form-control" placeholder="Veuillez entrer votre code postal" />
+                <label asp-for="Input.CodePostal" class="form-label"></label>
+                <span asp-validation-for="Input.CodePostal" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Pays" class="form-control" placeholder="Veuillez entrer votre pays" disabled value="Canada"/>
+                <label asp-for="Input.Pays" class="form-label"></label>
+                <span asp-validation-for="Input.Pays" class="text-danger"></span>
+            </div>
+            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Enregistrer</button>
         </form>
     </div>
 </div>
