--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,10 +9,10 @@
     }
 }
 
-<h1>Manage your account</h1>
+<h1>Gérer votre profil personnel</h1>
 
 <div>
-    <h2>Change your account settings</h2>
+    <h2>Modifier les paramètres de votre compte</h2>
     <hr />
     <div class="row">
         <div class="col-md-3">
