catalogue avec lien

--- a/Projet Web Commerce/Views/MainMenu/Index.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
-@model Projet_Web_Commerce.Models.ModelMainMenu
+@model Projet_Web_Commerce.Models.ModelCatalogue
 @inject SignInManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> SignInManager
 @inject UserManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> UserManager
 
