--- a/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
-@model List<Projet_Web_Commerce.Models.PPCategories>
+@model Projet_Web_Commerce.Models.ModelCatalogue
 @inject SignInManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> SignInManager
 @inject UserManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> UserManager
 
@@ -44,15 +44,44 @@ else
     @if (Model != null && Model != null)
     {
         <section class="autoplay" data-sizes="50vw">
-            @foreach (var category in Model)
+            @foreach (var category in Model.CategoriesList)
             {
                     <div class="slide">
                         <div class="card">
                             <div class="card-body">
                                 <h2 class="card-title">@Html.DisplayFor(modelItem => category.Description)</h2>
                                 <h5 class="card-details">@Html.DisplayFor(modelItem => category.Details)</h5>
-                                <p>Nombre de produits : 0</p>
-                            </div>
+
+
+                            
+
+                            @if (category.PPProduits != null)
+                            {
+                                <p>Vendeurs:</p>
+                                @foreach (var group in category.PPProduits
+                               .Where(p => p.PPVendeurs != null && p.PPVendeurs.NomAffaires != null)
+                               .GroupBy(p => p.PPVendeurs.NomAffaires))
+                                {
+                                    if (group.Key != null)
+                                    {
+                                        <a asp-controller="MainMenu"
+                                           asp-route-id="@group.Key"
+                                           asp-action="CatalogueVendeur">
+                                            @group.Key (@group.Count())
+                                        </a><br />
+                                    }
+                                    else
+                                    {
+                                        <p>No Vendeur Name</p>
+                                    }
+                                }
+
+                            }
+                            else
+                            {
+                                <p>Aucun vendeur dans cette catégorie.</p>
+                            }
+                        </div>
                         </div>
                     </div>
 
